Fixing WAR Compiling